--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,10 @@
         android:layout_height="wrap_content"
         android:text=""
         />
+
+    <Button
+        android:id="@+id/mapGen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Map Generation" />
 </LinearLayout>
