--- a/app/src/main/res/layout/activity_blue_tooth.xml
+++ b/app/src/main/res/layout/activity_blue_tooth.xml
@@ -37,7 +37,7 @@
          />
 
     <Button
-        android:id="@+id/onBtn"
+        android:id="@+id/OnBtn"
         style="style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="90dp"
         android:layout_height="40dp"
