--- a/app/src/main/res/layout/activity_btimage.xml
+++ b/app/src/main/res/layout/activity_btimage.xml
@@ -42,7 +42,7 @@
             app:layout_constraintVertical_bias="0.13" />
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/listView_BTDevices"
             android:layout_width="406dp"
             android:layout_height="155dp"
             app:layout_constraintBottom_toBottomOf="parent"
