--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:id="@+id/bluetooth"/>
     <!-- On button-->
     <Button
-        android:id="@+id/onBtn"
+        android:id="@+id/OnBtn"
         android:minWidth="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
