--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.25"
+            android:orientation="vertical"
             android:paddingLeft="10dp">
 
             <androidx.fragment.app.FragmentContainerView
@@ -35,7 +36,7 @@
 
         <LinearLayout
             android:id="@+id/grid_center"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_weight="0.55"
@@ -45,7 +46,7 @@
                 android:id="@+id/fragmentMapPanel"
                 android:name="com.example.mdp40.fragments.mapPanelFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragmentConsolePanel"
@@ -53,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:visibility="gone" />
+                 />
 
         </LinearLayout>
 
