--- a/app/src/main/res/layout/fragment_panel_center.xml
+++ b/app/src/main/res/layout/fragment_panel_center.xml
@@ -10,5 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
-
+    <Button
+        android:id="@+id/btnGetMap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onMapClicked"
+        android:text="Map"
+        android:textColor="@color/btn_connect_red" />
 </FrameLayout>
