--- a/app/src/main/res/layout/activity_map_init.xml
+++ b/app/src/main/res/layout/activity_map_init.xml
@@ -54,7 +54,7 @@
         app:layout_constraintHorizontal_bias="0.682"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.787" />
+        app:layout_constraintVertical_bias="0.841" />
 
     <Button
         android:id="@+id/moveObs"
@@ -83,6 +83,19 @@
         app:layout_constraintVertical_bias="0.731" />
 
     <Button
+        android:id="@+id/changeId"
+        android:layout_width="87dp"
+        android:layout_height="28dp"
+        android:text="Change id"
+        android:textSize="5sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.682"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.768" />
+
+    <Button
         android:id="@+id/clearCanvas"
         android:layout_width="87dp"
         android:layout_height="28dp"
@@ -93,7 +106,7 @@
         app:layout_constraintHorizontal_bias="0.682"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.843" />
+        app:layout_constraintVertical_bias="0.892" />
 
     <ImageView
         android:id="@+id/forwardView"
