--- a/app/src/main/res/layout/fragment_console.xml
+++ b/app/src/main/res/layout/fragment_console.xml
@@ -34,6 +34,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="48dp"
+            android:text="Send"
             android:enabled="true"/>
     </LinearLayout>
 
