--- a/app/src/main/res/layout/item_scan_bluetooth_device.xml
+++ b/app/src/main/res/layout/item_scan_bluetooth_device.xml
@@ -30,13 +30,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device Name:"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device Address:"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <LinearLayout
