--- a/app/src/main/res/layout/fragment_panel_center.xml
+++ b/app/src/main/res/layout/fragment_panel_center.xml
@@ -222,6 +222,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.871" />
 
+    <Button
+        android:id="@+id/fowardBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Foward"
+        tools:layout_editor_absoluteX="292dp"
+        tools:layout_editor_absoluteY="358dp" />
+
     <!-- TODO: Update blank fragment layout -->
 <!--    <TextView-->
 <!--        android:id="@+id/textView3"-->
